# DJIFlightRecordDecryption

./: .gitignore  Dockerfile  README.md  opendronelog-sample-flightlog.json  parsed_data.json  sample-flightlog.txt  test.py
dji-flightrecord-kit/source/FlightRecordStandardization/: CMakeLists.txt
dji-flightrecord-kit/source/FlightRecordStandardization/include/model/airlink/: fr_standardization_airlink_interface.h
dji-flightrecord-kit/source/FlightRecordStandardization/include/model/battery/: fr_standardization_battery_interface.h
dji-flightrecord-kit/source/FlightRecordStandardization/include/model/camera/: fr_standardization_camera_interface.h
dji-flightrecord-kit/source/FlightRecordStandardization/include/model/flightcontroller/: fr_standardization_flight_controller_interface.h
dji-flightrecord-kit/source/FlightRecordStandardization/include/model/rc/: fr_standardization_remote_controller_interface.h
dji-flightrecord-kit/source/FlightRecordStandardization/include/model/summary/: fr_standardization_summary_interface.h
dji-flightrecord-kit/source/FlightRecordStandardization/model/GOBusiness/: fr_standardization_go_business_model.cpp  fr_standardization_go_business_model.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/model/airlink/: fr_standardization_airlink_model.cpp  fr_standardization_airlink_model.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/model/battery/: fr_standardization_battery_state.cpp  fr_standardization_battery_state.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/model/camera/: fr_standardization_camera_state.cpp  fr_standardization_camera_state.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/model/flightcontroller/: fr_standardization_flightcontroller_model.cpp  fr_standardization_flightcontroller_model.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/model/frametime/: fr_standardization_frametime_model.cpp
dji-flightrecord-kit/source/FlightRecordStandardization/model/phantom3protocol/: ZucGZjOtwWrgqCCe.h
dji-flightrecord-kit/source/FlightRecordStandardization/model/rc/: fr_standardization_rc_model.cpp  fr_standardization_rc_model.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/model/summary/: fr_standardization_summary_model.cpp  fr_standardization_summary_model.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/parser/filler/GOBusiness/: fr_standardization_go_business_filler.cpp  fr_standardization_go_business_filler.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/parser/filler/airlink/: fr_standardization_airlink_filler.cpp  fr_standardization_airlink_filler.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/parser/filler/battery/: fr_standardization_battery_filler.cpp  fr_standardization_battery_filler.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/parser/filler/camera/: fr_standardization_camera_filler.cpp  fr_standardization_camera_filler.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/parser/filler/flightcontroller/: fr_standardization_flightcontroller_filler.cpp  fr_standardization_flightcontroller_filler.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/parser/filler/gimbal/: fr_standardization_gimbal_filler.cpp  fr_standardization_gimbal_filler.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/parser/filler/mobileRC/: fr_standardization_mobile_rc_filler.cpp  fr_standardization_mobile_rc_filler.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/parser/filler/mobiledevice/: fr_standardization_mobile_device_filler.cpp  fr_standardization_mobile_device_filler.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/parser/filler/rchardware/: fr_standardization_rc_hardware_filler.cpp  fr_standardization_rc_hardware_filler.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/parser/filler/vision/: fr_standardization_vision_filter.cpp  fr_standardization_vision_filter.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/parser/imp/: fr_standardization_parser_Imp.cpp  fr_standardization_parser_Imp.hpp
dji-flightrecord-kit/source/FlightRecordStandardization/server_include/model/GOBusiness/: fr_standardization_go_business_interface.h
dji-flightrecord-kit/source/FlightRecordStandardization/utils/: fr_standardization_utils.cpp  fr_standardization_utils_private.h
dji-flightrecord-kit/source/FlightRecordStandardization/utils/json/: json11.cpp
dji-flightrecord-kit/source/FlightRecordStandardizationCpp/: CMakeLists.txt
dji-flightrecord-kit/source/FlightRecordStandardizationCpp/parser/: DJIFRProtoParser.cpp
dji-flightrecordengine/source/: CMakeLists.txt
dji-flightrecordengine/source/Parser/: FlightRecordParserDataTypePublic.h  FlightRecordParserEngine.cpp  FlightRecordParserEngine.h
dji-flightrecordengine/source/Parser/decoder/: flight_record_version_decoder.h
dji-flightrecordengine/source/Parser/decoder/version13/: flight_record_version13_decoder.cpp
dji-flightrecordengine/source/Parser/protocol/: FlightRecordParserProtocol.cpp  FlightRecordParserProtocol.h
dji-flightrecordengine/source/Utils/Cache/: FlightRecordFileCacheUtils.cpp  FlightRecordFileCacheUtils.h
dji-flightrecordengine/source/Utils/buffer/: flight_record_buffer.cpp
dji-flightrecordengine/source/Utils/encryption/: FlightRecordCRC64.h  FlightRecordEncryptUtils.cpp  FlightRecordEncryptUtils.h
dji-flightrecordengine/source/Utils/thread/: FlightRecordTimer.h
dji-flightrecordengine/source/model/info/: FlightRecordInfoModel.h
install/: install.sh
python/: frsample.py
(+2 files in other folders)
